syntax = "proto3";

package system.user.v1;

import "errors/errors.proto";

option go_package = "quest-admin/api/user/v1;v1";

// SystemUser 用户管理相关的错误定义
enum ErrorReason {
  option (errors.default_code) = 500;

  // 用户不存在
  USER_NOT_FOUND = 0 [(errors.code) = 404];
  // 用户名已存在
  USERNAME_ALREADY_EXISTS = 10 [(errors.code) = 409];
  // 邮箱已存在
  EMAIL_ALREADY_EXISTS = 20 [(errors.code) = 409];
  // 手机号已存在
  MOBILE_ALREADY_EXISTS = 30 [(errors.code) = 409];
  // 密码错误
  INVALID_PASSWORD = 40 [(errors.code) = 400];
  // 用户状态无效
  INVALID_USER_STATUS = 50 [(errors.code) = 400];
  // 密码格式无效
  INVALID_PASSWORD_FORMAT = 60 [(errors.code) = 400];
  // 用户名格式无效
  INVALID_USERNAME_FORMAT = 70 [(errors.code) = 400];
  // 邮箱格式无效
  INVALID_EMAIL_FORMAT = 80 [(errors.code) = 400];
  // 手机号格式无效
  INVALID_MOBILE_FORMAT = 90 [(errors.code) = 400];
  // 用户已被禁用
  USER_DISABLED = 100 [(errors.code) = 403];
  // 权限不足
  PERMISSION_DENIED = 110 [(errors.code) = 403];
  // 密码确认不匹配
  PASSWORD_CONFIRM_MISMATCH = 120 [(errors.code) = 400];
  // 岗位不存在
  POST_NOT_FOUND = 130 [(errors.code) = 404];
  // 部门不存在
  DEPT_NOT_FOUND = 140 [(errors.code) = 404];
  // 租户不存在
  TENANT_NOT_FOUND = 150 [(errors.code) = 404];
  // 操作类型无效
  INVALID_OPERATION_TYPE = 160 [(errors.code) = 400];
  // 用户删除失败
  USER_DELETE_FAILED = 170 [(errors.code) = 500];
  // 密码加密失败
  PASSWORD_HASH_FAILED = 180 [(errors.code) = 500];
  // 数据库操作失败
  DATABASE_ERROR = 190 [(errors.code) = 500];
  // 参数验证失败
  VALIDATION_FAILED = 200 [(errors.code) = 400];
  // 用户昵称格式无效
  INVALID_NICKNAME_FORMAT = 210 [(errors.code) = 400];
  // 性别值无效
  INVALID_SEX_VALUE = 220 [(errors.code) = 400];
  // 租户ID无效
  INVALID_TENANT_ID = 230 [(errors.code) = 400];
  // 未授权访问
  UNAUTHORIZED = 240 [(errors.code) = 401];
  // 系统内部错误
  INTERNAL_ERROR = 250 [(errors.code) = 500];
  // 密码长度不合法
  PASSWORD_LENGTH_INVALID = 26 [(errors.code) = 400];

}